complete modify manifest.json + add new font

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   /* 염두해둔 글씨체
     Google Font 
-    -> fredoka one, kalam */
+    -> fredoka one, kalam, Baloo, nanum Pen script */
   font-family: "Fredoka One", cursive;
 }
