--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+html,
 body {
   /* 염두해둔 글씨체
     Google Font 
@@ -6,4 +7,22 @@ body {
   background-image: url("images/background.jpg");
   background-size: cover;
   background-position: center center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  float: left;
+}
+
+#div1 {
+  height: 50%;
+  width: 50%;
+}
+
+#div2 {
+  height: 50%;
+  width: 50%;
 }
