--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,8 @@ body {
   padding: 0;
 }
 
-/* .js-clock {
-  margin-left: 100px;
-} */
-
-/* canvas와 div 같이 표현하기!!! */
-
 /* div 1 */
-#div1 canvas {
+#div-clock canvas {
   position: absolute;
   /* top: 0;
   left: 0; */
@@ -32,36 +26,49 @@ body {
   bottom: 0;
 }
 
-#div1 .js-clock {
+#div-clock .js-clock {
   width: 100%;
-  text-align: center;
   position: absolute;
-  top: 250px;
-  font-size: 48px;
+  top: 60%;
+  font-size: 52px;
+  margin: 0 auto;
 }
+
+#div-clock .js-clock h1 {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
 /* window size에 따른 div 변화 */
-div {
+#div-clock,
+#div-Dday,
+#div-toDo {
   float: left;
 }
 
-#div1 {
+#div-clock {
   height: 60%;
   width: 100%;
   position: relative;
 }
 
-#div2 {
+#div-Dday {
   height: 40%;
   width: 100%;
 }
 
 @media (min-width: 996px) {
-  #div1 {
+  #div-clock {
     height: 60%;
     width: 60%;
   }
-  #div2 {
-    height: 50%;
+  #div-Dday {
+    height: 60%;
     width: 40%;
+  }
+  #div-toDo {
+    height: 40%;
+    width: 100%;
   }
 }
